--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "*"
-chrono = "*"
+anyhow = "1.0.86"
+rand = "0.8.4"
+chrono = "0.4.38"
+rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite_migration = "1.2.0"
